...
                        .frame(width: 30, height: 30)
                        .foregroundColor(SRColors.white)
                })
                
                Spacer()
                
                SRButtonCircleSymbol(symbolName: "rectangle.portrait.and.arrow.right", accessibilityID: "logoutButton") {
                    viewModel.logoutUser()
                }
            }
            .padding(.top, 50)
            .padding(.horizontal, 16)
            
...
