...
            .frame(height: (UIScreen.main.bounds.height / 2) + 150)
            
            Spacer()
            
            // MARK: - Settings and Create List Buttons
            HStack {
                SRButtonCircleSymbol(symbolName: "gear", accessibilityID: "settingsButton") {
                    viewModel.isShowingSettings.toggle()
                }
                .padding(.leading, 16)
                
                Spacer()
                
...
